<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_recipe_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.digitalsprouts.recipesearch.RecipeDetailActivity"
    tools:showIn="@layout/activity_recipe_detail">


    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/recipe_image_description"
        android:maxHeight="500dp"
        android:minHeight="200dp"
        android:scaleType="fitCenter"/>


    <TextView
        android:id="@+id/ingredients_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/image"
        android:layout_marginBottom="10dp"
        android:text="@string/ingredients"
        />


    <ListView
        android:id="@+id/ingredient_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_view_group"
        android:layout_below="@+id/ingredients_label">
    </ListView>


    <RelativeLayout
        android:id="@+id/bottom_view_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

        <TextView
            android:id="@+id/info_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:text="@string/info"
            />

        <Button
            android:id="@+id/showInstructionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_label"
            android:layout_centerHorizontal="true"
            android:text="@string/view_instructions"
            />

        <Button
            android:id="@+id/showSourceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/showInstructionButton"
            android:layout_centerHorizontal="true"
            android:text="@string/view_original"
            />

        <TextView
            android:id="@+id/publisher_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/showSourceButton"
            />

        <TextView
            android:id="@+id/social_media_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/showSourceButton"
            />

    </RelativeLayout>

</RelativeLayout>
